--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: 'Lato', sans-serif;
             overflow: no-content;
         }
-        body {
+        html {
             /* The image used */
             background-image: url("./img/water-background.png");
 
