--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
         .button {
             margin: 1rem;
             border: #ffffff 2px solid;
-            border-radius: 4px;
+            border-radius: 50px;
             width: 10rem;
-            height: 4rem;
-            line-height: 4rem;
+            height: 3rem;
+            line-height: 3rem;
             font-size: 1.3rem;
+        }
+        .button-primary {
+            background-color: #03a9f4;
+            border-color: #03a9f4;
         }
         a, a:visited {
             text-decoration: none;
@@ -55,12 +59,12 @@
 <body>
 
 <h1 class="logo">Caferace</h1>
-<p>17-19 maart, Friesland</p>
+<p>17-19 april, Friesland</p>
 <p class="tagline">Is jouw boot de snelste om alle cafes langs te gaan?</p>
 
 <div class="callToAction">
     <a href="https://tickets.caferace.nl/Loefbijter/caferace">
-        <div class="button">
+        <div class="button button-primary">
             <span>Bestel tickets</span>
         </div>
     </a>
