--- a/index.html
+++ b/index.html
@@ -24,34 +24,65 @@
             background-size: cover;
         }
         .logo {
-            font-size: 5rem;
+            font-size: 5em;
             margin-bottom: 0;
         }
         .tagline {
-            margin-top: 10rem;
-            font-size: 2rem;
+            margin: 2em;
+            font-size: 2em;
         }
         .callToAction{
-            margin-top: 4rem;
+            margin-top: 4em;
             display: flex;
             justify-content: center;
         }
-        .button {
-            margin: 1rem;
-            border: #ffffff 2px solid;
-            border-radius: 50px;
-            width: 10rem;
-            height: 3rem;
-            line-height: 3rem;
-            font-size: 1.3rem;
-        }
-        .button-primary {
-            background-color: #03a9f4;
-            border-color: #03a9f4;
-        }
+        /*.button {*/
+        /*    margin: 1rem;*/
+        /*    border: #ffffff 2px solid;*/
+        /*    border-radius: 50px;*/
+        /*    width: 10rem;*/
+        /*    height: 3rem;*/
+        /*    line-height: 3rem;*/
+        /*    font-size: 1.3rem;*/
+        /*}*/
+        /*.button-primary {*/
+        /*    background-color: #03a9f4;*/
+        /*    border-color: #03a9f4;*/
+        /*}*/
         a, a:visited {
             text-decoration: none;
             color: white;
+        }
+        #mc_embed_signup_scroll {
+            display: flex;
+            flex-flow: row wrap;
+            align-items: center;
+            justify-content: center;
+        }
+        #mc_embed_signup {
+            margin: auto;
+        }
+        #mc-embedded-subscribe, #mce-EMAIL {
+            border: 0;
+        }
+        #mce-EMAIL {
+            border-bottom-left-radius: 10px;
+            border-top-left-radius: 10px;
+            padding-left: 1em;
+            height: 46px;
+            width: 17em;
+        }
+        #mc-embedded-subscribe {
+            border-bottom-right-radius: 10px;
+            border-top-right-radius: 10px;
+            background-color: #03a9f4;
+            color: #FFF;
+            height: 48px;
+        }
+        @media screen and (max-width: 420px) {
+            body {
+                font-size: 10px;
+            }
         }
     </style>
 </head>
@@ -61,6 +92,27 @@
 <p>17-19 april, Friesland</p>
 <p class="tagline">Is jouw boot de snelste om alle cafes langs te gaan?</p>
 
+<p>Schrijf je nu in en hoor als eerste wanneer de kaartenverkoop start!</p>
+<!-- Begin Mailchimp Signup Form -->
+<div id="mc_embed_signup">
+    <form action="https://caferace.us4.list-manage.com/subscribe/post?u=bd1e72eabc4795acd0a086d75&amp;id=37a66f43a6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+
+            <div class="mc-field-group">
+                <input type="email" value="" placeholder="emailadres" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bd1e72eabc4795acd0a086d75_37a66f43a6" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Aanmelden" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+    </form>
+</div>
+
+<!--End mc_embed_signup-->
+<!--
 <div class="callToAction">
     <a href="https://tickets.caferace.nl/Loefbijter/caferace">
         <div class="button button-primary">
@@ -73,6 +125,7 @@
         </div>
     </a>
 </div>
+-->
 
 </body>
 </html>
