ADD fix for iphone css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:900&display=swap" rel="stylesheet">
     <style>
+
+input, textarea {
+  -webkit-appearance: none;
+  -webkit-border-radius:0px;
+}
+
         html, body {
             color: #ffffff;
             text-align: center;
