--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ input, textarea {
 </head>
 <body>
 
-<h1 class="logo">Caferace</h1>
+<h1 class="logo">Caférace</h1>
 <p>17-19 april, Friesland</p>
 <p class="tagline">Is jouw boot de snelste om alle cafes langs te gaan?</p>
 
