Add Jekyll for page building

--- a/info.html
+++ b/info.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Caferace - Info</title>
-</head>
-<body>
-<h1>Caferace</h1>
-Euh ja ena het is nu 23:00 ik ga slapen.
-</body>
-</html>
+---
+layout: default
+title: Info
+---
+
+<h1>Info </h1>
