--- a/voorwaarden.html
+++ b/voorwaarden.html
@@ -2,7 +2,7 @@
 layout: default
 title: Algemene voorwaarden
 ---
-<h1>Algemene voorwaarden Café Race 17 tm/ 19 april 2020</h1>
+<h1>Algemene voorwaarden Café Race 17 t/m 19 april 2020</h1>
 
 <ol>
     <li>Een team deelnemend aan de Café Race 2020 bestaat uit 4 personen (eventueel 5 personen) die op het moment van deelname nog student zijn met ten minste 1 schipper aan boord met voldoende zeilervaring om een wedstrijd te varen. In geval van ziekte of verhindering op andere wijze, dient een team zelf voor vervangende bemanning te zorgen</li>
