--- a/index.html
+++ b/index.html
@@ -6,28 +6,8 @@ title: Home
 <p>17-19 april, Friesland</p>
 <p class="tagline">Is jouw boot de snelste om alle cafes langs te gaan?</p>
 
-<p>Schrijf je nu in en hoor als eerste wanneer de kaartenverkoop start!</p>
-<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-    <form action="https://caferace.us4.list-manage.com/subscribe/post?u=bd1e72eabc4795acd0a086d75&amp;id=37a66f43a6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
+<!--<p>Schrijf je nu in en hoor als eerste wanneer de kaartenverkoop start!</p>-->
 
-            <div class="mc-field-group">
-                <input type="email" value="" placeholder="emailadres" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bd1e72eabc4795acd0a086d75_37a66f43a6" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Aanmelden" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </div>
-    </form>
-</div>
-
-<!--End mc_embed_signup-->
-<!--
 <div class="callToAction">
     <a href="https://tickets.caferace.nl/Loefbijter/caferace">
         <div class="button button-primary">
@@ -40,4 +20,3 @@ title: Home
         </div>
     </a>
 </div>
--->
