Add button to go shopping and a space under the pages

--- a/info.html
+++ b/info.html
@@ -10,3 +10,11 @@ title: Info
 <p>De Caférace is in 2017 voor het laatst georganiseerd waardoor menig zeilend/zuipend student niet bekend is met het fenomeen. ‘De Caférace’ is een studenten zeilwedstrijd waarbij er gevaren wordt van kroeg naar kroeg. Het doel? Zoveel mogelijk punten verkrijgen om de race te kunnen winnen! De punten kunnen bijvoorbeeld gehaald worden door: de afstanden die gevaren worden, de drankjes die gedronken worden en zelfs je inzet wordt beloond. Buiten het zeilen en het borrelen overdag komen er natuurlijk ook knalfuiven in de avonden. Het heeft wat wils voor zowel de fanatieke zeiler als de fanatieke borrelaar.</p>
 <h2>26e editie</h2>
 <p>De 26e editie van de Caférace zal op 17 tm/ 19 april 2020 plaatsvinden in Balk. Het verblijf zal bij de accommodatie van de Ulepanne zijn. Er zullen vanaf Balk ongeveer 20 boten de strijd aan gaan om de Caférace te winnen! Je kunt je opgeven per boot van 4 of 5 personen. De kosten zijn 75 euro per persoon.<!-- Op 26 februari gaan de inschrijvingen open om 18:00.--></p>
+
+<div class="callToAction">
+    <a href="https://tickets.caferace.nl/Loefbijter/caferace">
+        <div class="button button-primary">
+            <span>Bestel tickets</span>
+        </div>
+    </a>
+</div>
