--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Is jouw boot de snelste om alle cafés langs te gaan?
 ---
+{% comment %}
 <script type="application/ld+json">
     {
         "@context" : "http://schema.org",
@@ -38,8 +39,9 @@ title: Is jouw boot de snelste om alle cafés langs te gaan?
         "typicalAgeRange" : "18+"
     }
 </script>
+{% endcomment %}
 <h1 class="logo">Caférace</h1>
-<p>17-19 april, Friesland</p>
+<p><s>17-19 april, Friesland</s></p>
 <p class="tagline">Haalt jouw boot de meeste punten?</p>
 
 <p>De Caférace is de legendarische studentenzeilwedstrijd waar jij samen met jouw boot zoveel mogelijk cafés afgaat om punten te verdienen. Het bied de zeilende en zuipende student een geweldig weekend met veel plezier en een onvergetelijke ervaring.</p>
