Get the site ready for 2021

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@ title: Is jouw boot de snelste om alle cafés langs te gaan?
 </script>
 {% endcomment %}
 <h1 class="logo">Caférace</h1>
-<p><s>17-19 april, Friesland</s></p>
+<p>lente 2021, Friesland</p>
 <p class="tagline">Haalt jouw boot de meeste punten?</p>
 
 <p>De Caférace is de legendarische studentenzeilwedstrijd waar jij samen met jouw boot zoveel mogelijk cafés afgaat om punten te verdienen. Het bied de zeilende en zuipende student een geweldig weekend met veel plezier en een onvergetelijke ervaring.</p>
 
 <div class="callToAction">
+    {% comment %}
     <a href="https://tickets.caferace.nl/Loefbijter/caferace">
         <div class="button button-primary">
             <span>Bestel tickets</span>
         </div>
     </a>
+    {% endcomment %}
     <a href="info.html">
         <div class="button">
             <span>Lees meer</span>
